chore: document system-properties, jvm-options and jvm-home private locations configurations
Ref: HYB-228